// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema
//env("DATABASE_URL")

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

generator docs {
  provider = "node node_modules/prisma-docs-generator"
}

generator erd {
  provider = "prisma-erd-generator"
  theme    = "forest"
  output   = "ERD.png"
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://postgres:postgres@localhost:5432/testdb?schema=public"
}

//DOMAIN MODELS //////////////////////////////////////////////////////////////
model Industry {
  id         String      @id @default(uuid())
  name       String      @unique
  promotions Promotion[]
  categories Category[]
  features   Feature[]
}

model Country {
  id            String          @id @default(uuid())
  name          String          @unique
  user          User[]
  promotions    Promotion[]
  brandTemplate BrandTemplate[]
  features      Feature[]
}

//DOMAIN MODELS //////////////////////////////////////////////////////////////
//
//
//
//
//
//INTERNAL MODELS ////////////////////////////////////////////////////////////
model Role {
  id          String        @id @default(uuid())
  name        String        @unique
  description String?
  permissions Permissions[]
  user        User[]
}

model Domain {
  id          String        @id @default(uuid())
  name        String        @unique
  description String?
  permissions Permissions[]
}

model Permissions {
  id          String          @id @default(uuid())
  accessLevel PermissionTypes @default(Viewer)
  domain      Domain          @relation(fields: [domainId], references: [id])
  role        Role            @relation(fields: [roleId], references: [id])
  domainId    String
  roleId      String
}

model User {
  id                String          @id @default(uuid())
  name              String
  email             String          @unique
  password          String?
  token             String?
  fcm_token         String?
  avatar            String?
  role              Role?           @relation(fields: [roleId], references: [id])
  roleId            String?
  suspendendAt      DateTime?
  status            UserStatus?
  streetAddress     String?
  city              String?
  cell              String?
  tell              String?
  verificationCode  Int?
  country           Country?        @relation(fields: [countryId], references: [id])
  countryId         String?
  teams             Team[]
  assignedTasks     Task[]          @relation("assignedTasks")
  createdTasks      Task[]          @relation("createdTasks")
  promotion         Promotion[]
  payment           Payment[]
  createdTemplates  BrandTemplate[] @relation("createdTemplates")
  reviewedTemplates BrandTemplate[] @relation("reviewedTemplates")
  clientEdits       ClientEdit[]
  createdAt         DateTime        @default(now())
}

model Team {
  id        String   @id @default(uuid())
  name      String
  createdAt DateTime @default(now())
  leader    String
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
  goals     Goal[]
}

model Goal {
  id          String    @id @default(uuid())
  teams       Team[]
  title       String    @unique
  description String?
  startDate   DateTime?
  createdAt   DateTime  @default(now())
  deadline    DateTime?
  active      Boolean?
  isComplete  Boolean?
  tasks       Task[]
}

model Task {
  id          String        @id @default(uuid())
  title       String        @unique
  comments    String?
  createdAt   DateTime      @default(now())
  startDate   DateTime?
  dueDate     DateTime?
  priority    TaskPriority?
  stage       TaskStage?
  Goal        Goal?         @relation(fields: [GoalId], references: [id])
  GoalId      String?
  assignee    User?         @relation("assignedTasks", fields: [assigneeId], references: [id])
  assigneeId  String?
  createdBy   User?         @relation("createdTasks", fields: [createdById], references: [id])
  createdById String?
}

enum PermissionTypes {
  Viewer
  Editor
  Admin
}

enum TaskStage {
  Complete
  InProgress
  Todo
}

enum TaskPriority {
  Low
  Medium
  High
}

enum UserStatus {
  Active
  Suspendend
  Invited
}

//INTERNAL MODELS ///////////////////////////////////////////////////////////
//
//
//
//
//CLIENTS MODELS ////////////////////////////////////////////////////////////
//CLIENTS MODELS ////////////////////////////////////////////////////////////
//
//
//
//
//PREMIUMS MODELS ////////////////////////////////////////////////////////////
model Feature {
  id          String      @id @default(uuid())
  name        String      @unique
  description String?
  type        FeatureType @default(Free)
  industries  Industry[]
  countries   Country[]
  promotions  Promotion[]
  packages    Package[]
}

model Package {
  id          String         @id @default(uuid())
  name        String         @unique
  description String?
  prices      PackagePrice[]
  features    Feature[]
  color       String?
  level       Int            @unique
  promotions  Promotion[]
  payment     Payment[]
}

model PackagePrice {
  id            String   @id @default(uuid())
  duration      Float
  amount        Float
  extentionTime Float?
  Package       Package? @relation(fields: [packageId], references: [id])
  packageId     String?
}

model Promotion {
  id          String     @id @default(uuid())
  name        String
  description String?
  startDate   DateTime
  endDate     DateTime
  features    Feature[]
  industries  Industry[]
  countries   Country[]
  packages    Package[]
  createdBy   User?      @relation(fields: [createdById], references: [id])
  createdById String?
  createdAt   DateTime   @default(now())
}

model Payment {
  id            String   @id @default(uuid())
  amount        Decimal
  date          DateTime
  center        String?
  package       Package  @relation(fields: [packageId], references: [id])
  packageId     String
  paymentMethod String
  cashier       User     @relation(fields: [cashierId], references: [id])
  cashierId     String
  revoked       Boolean?
  createAt      DateTime @default(now())
}

enum FeatureType {
  Free
  Premium
}

//PREMIUMS MODELS ////////////////////////////////////////////////////////////
//
//
//
//
//TEMPLATES MODELS //////////////////////////////////////////////////////////////

model Category {
  id            String          @id @default(uuid())
  name          String          @unique
  description   String?
  icon          String?
  industries    Industry[]
  createdBy     String?
  createdAt     DateTime        @default(now())
  brandTemplate BrandTemplate[]
}

model Image {
  id                String          @id @default(uuid())
  url               String          @unique
  incomplete        Boolean?
  incompleteMessage String?
  isTransparent     Boolean?
  side              ImageSide       @default(front)
  brandTemplate     BrandTemplate[]
}

enum ImageSide {
  front
  left
  right
  back
  inside
}

enum DraftType {
  FromClient
  InProgress
  Rejected
  Review
  ClientEdits
}

enum DarftSources {
  Client
  Mine
  Reviewer
  Admin
}

model ClientEdit {
  id              String           @id @default(uuid())
  clientId        String?
  action          ClientEditAction
  field           String
  newValue        String
  oldValue        String
  approved        Boolean?
  approvedTime    DateTime?
  approvedBy      User?            @relation(fields: [approvedById], references: [id])
  approvedById    String?
  brandTemplate   BrandTemplate    @relation(fields: [brandTemplateId], references: [id])
  brandTemplateId String
}

enum ClientEditAction {
  Added
  Changed
  Removed
}

model ClientRating {
  id                String        @id @default(uuid())
  client_id         String
  rating            Int
  goodImplematation Boolean?
  comment           String?
  brandTemplate     BrandTemplate @relation(fields: [brandTemplateId], references: [id])
  brandTemplateId   String
}

model Tel {
  id              String        @id @default(uuid())
  name            String
  number          String
  brandTemplate   BrandTemplate @relation(fields: [brandTemplateId], references: [id])
  brandTemplateId String
}

model BrandTemplate {
  id                     String         @id @default(uuid())
  name                   String         @unique
  description            String?
  tags                   String[]
  image                  Image?         @relation(fields: [imageId], references: [id])
  imageId                String?
  threeDImage            String?
  video                  String?
  sizes                  String[]
  units                  String[]
  category               Category       @relation(fields: [categoryId], references: [id])
  categoryId             String
  addon_categories       String[]
  varieties              String[]
  manufacturer           String
  street_address         String?
  city                   String?
  country                Country?       @relation(fields: [countryId], references: [id])
  countryId              String?
  email                  String?
  telNumbers             Tel[]
  website                String?
  draftNotes             String?
  draftType              String?
  draftCreatedAt         DateTime
  createdBy              User?          @relation("createdTemplates", fields: [createdById], references: [id])
  createdById            String?
  createdAt              DateTime       @default(now())
  reviewedAt             DateTime?
  reviewNotes            String?
  reviewer               User?          @relation("reviewedTemplates", fields: [reviewerId], references: [id])
  reviewerId             String?
  inReview               Boolean?
  isApproved             Boolean?
  lastModified           DateTime       @updatedAt
  client_edits           ClientEdit[]
  creatorClientId        String?
  creatorClientProductId String?
  fromClientCleanedBy    String?
  implementationRatings  ClientRating[]
  hasZeroDepositOrder    Boolean?
  hasTransparencyAll     Boolean?
  isNotForUnder18        Boolean?
  isDirty                Boolean?
}

//TEMPLATES MODELS //////////////////////////////////////////////////////////////
