//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Industry {
  id String [pk]
  name String [unique, not null]
  promotions Promotion [not null]
  categories Category [not null]
  features Feature [not null]
}

Table Country {
  id String [pk]
  name String [unique, not null]
  user User [not null]
  promotions Promotion [not null]
  brandTemplate BrandTemplate [not null]
  features Feature [not null]
}

Table Role {
  id String [pk]
  name String [unique, not null]
  description String
  permissions Permissions [not null]
  user User [not null]
}

Table Domain {
  id String [pk]
  name String [unique, not null]
  description String
  permissions Permissions [not null]
}

Table Permissions {
  id String [pk]
  accessLevel PermissionTypes [not null, default: 'Viewer']
  domain Domain [not null]
  role Role [not null]
  domainId String [not null]
  roleId String [not null]
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String
  token String
  fcm_token String
  avatar String
  role Role
  roleId String
  suspendendAt DateTime
  status UserStatus
  streetAddress String
  city String
  cell String
  tell String
  verificationCode Int
  country Country
  countryId String
  teams Team [not null]
  assignedTasks Task [not null]
  createdTasks Task [not null]
  promotion Promotion [not null]
  payment Payment [not null]
  createdTemplates BrandTemplate [not null]
  reviewedTemplates BrandTemplate [not null]
  clientEdits ClientEdit [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Team {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  leader String [not null]
  user User
  userId String
  goals Goal [not null]
}

Table Goal {
  id String [pk]
  teams Team [not null]
  title String [unique, not null]
  description String
  startDate DateTime
  createdAt DateTime [default: `now()`, not null]
  deadline DateTime
  active Boolean
  isComplete Boolean
  tasks Task [not null]
}

Table Task {
  id String [pk]
  title String [unique, not null]
  comments String
  createdAt DateTime [default: `now()`, not null]
  startDate DateTime
  dueDate DateTime
  priority TaskPriority
  stage TaskStage
  Goal Goal
  GoalId String
  assignee User
  assigneeId String
  createdBy User
  createdById String
}

Table Feature {
  id String [pk]
  name String [unique, not null]
  description String
  type FeatureType [not null, default: 'Free']
  industries Industry [not null]
  countries Country [not null]
  promotions Promotion [not null]
  packages Package [not null]
}

Table Package {
  id String [pk]
  name String [unique, not null]
  description String
  prices PackagePrice [not null]
  features Feature [not null]
  color String
  level Int [unique, not null]
  promotions Promotion [not null]
  payment Payment [not null]
}

Table PackagePrice {
  id String [pk]
  duration Float [not null]
  amount Float [not null]
  extentionTime Float
  Package Package
  packageId String
}

Table Promotion {
  id String [pk]
  name String [not null]
  description String
  startDate DateTime [not null]
  endDate DateTime [not null]
  features Feature [not null]
  industries Industry [not null]
  countries Country [not null]
  packages Package [not null]
  createdBy User
  createdById String
  createdAt DateTime [default: `now()`, not null]
}

Table Payment {
  id String [pk]
  amount Decimal [not null]
  date DateTime [not null]
  center String
  package Package [not null]
  packageId String [not null]
  paymentMethod String [not null]
  cashier User [not null]
  cashierId String [not null]
  revoked Boolean
  createAt DateTime [default: `now()`, not null]
}

Table Category {
  id String [pk]
  name String [unique, not null]
  description String
  icon String
  industries Industry [not null]
  createdBy String
  createdAt DateTime [default: `now()`, not null]
  brandTemplate BrandTemplate [not null]
}

Table Image {
  id String [pk]
  url String [unique, not null]
  incomplete Boolean
  incompleteMessage String
  isTransparent Boolean
  side ImageSide [not null, default: 'front']
  brandTemplate BrandTemplate [not null]
}

Table ClientEdit {
  id String [pk]
  clientId String
  action ClientEditAction [not null]
  field String [not null]
  newValue String [not null]
  oldValue String [not null]
  approved Boolean
  approvedTime DateTime
  approvedBy User
  approvedById String
  brandTemplate BrandTemplate [not null]
  brandTemplateId String [not null]
}

Table ClientRating {
  id String [pk]
  client_id String [not null]
  rating Int [not null]
  goodImplematation Boolean
  comment String
  brandTemplate BrandTemplate [not null]
  brandTemplateId String [not null]
}

Table Tel {
  id String [pk]
  name String [not null]
  number String [not null]
  brandTemplate BrandTemplate [not null]
  brandTemplateId String [not null]
}

Table BrandTemplate {
  id String [pk]
  name String [unique, not null]
  description String
  tags String[] [not null]
  image Image
  imageId String
  threeDImage String
  video String
  sizes String[] [not null]
  units String[] [not null]
  category Category [not null]
  categoryId String [not null]
  addon_categories String[] [not null]
  varieties String[] [not null]
  manufacturer String [not null]
  street_address String
  city String
  country Country
  countryId String
  email String
  telNumbers Tel [not null]
  website String
  draftNotes String
  draftType String
  draftCreatedAt DateTime [not null]
  createdBy User
  createdById String
  createdAt DateTime [default: `now()`, not null]
  reviewedAt DateTime
  reviewNotes String
  reviewer User
  reviewerId String
  inReview Boolean
  isApproved Boolean
  lastModified DateTime [not null]
  client_edits ClientEdit [not null]
  creatorClientId String
  creatorClientProductId String
  fromClientCleanedBy String
  implementationRatings ClientRating [not null]
  hasZeroDepositOrder Boolean
  hasTransparencyAll Boolean
  isNotForUnder18 Boolean
  isDirty Boolean
}

Enum PermissionTypes {
  Viewer
  Editor
  Admin
}

Enum TaskStage {
  Complete
  InProgress
  Todo
}

Enum TaskPriority {
  Low
  Medium
  High
}

Enum UserStatus {
  Active
  Suspendend
  Invited
}

Enum FeatureType {
  Free
  Premium
}

Enum ImageSide {
  front
  left
  right
  back
  inside
}

Enum DraftType {
  FromClient
  InProgress
  Rejected
  Review
  ClientEdits
}

Enum DarftSources {
  Client
  Mine
  Reviewer
  Admin
}

Enum ClientEditAction {
  Added
  Changed
  Removed
}

Ref: Permissions.domainId > Domain.id

Ref: Permissions.roleId > Role.id

Ref: User.roleId > Role.id

Ref: User.countryId > Country.id

Ref: Team.userId > User.id

Ref: Task.GoalId > Goal.id

Ref: Task.assigneeId > User.id

Ref: Task.createdById > User.id

Ref: PackagePrice.packageId > Package.id

Ref: Promotion.createdById > User.id

Ref: Payment.packageId > Package.id

Ref: Payment.cashierId > User.id

Ref: ClientEdit.approvedById > User.id

Ref: ClientEdit.brandTemplateId > BrandTemplate.id

Ref: ClientRating.brandTemplateId > BrandTemplate.id

Ref: Tel.brandTemplateId > BrandTemplate.id

Ref: BrandTemplate.imageId > Image.id

Ref: BrandTemplate.categoryId > Category.id

Ref: BrandTemplate.countryId > Country.id

Ref: BrandTemplate.createdById > User.id

Ref: BrandTemplate.reviewerId > User.id